# tycoonpy

./: .gitignore  README.md  pyproject.toml
configs/: tycoonpy.conf
scripts/: meeting_record_import.py
src/tycoonpy/app/: data_app.py  rest_app.py  tycoon_app.py
src/tycoonpy/controller/: user_quality_controller.py
src/tycoonpy/model/po/: __init__.py  database.py  meeting.py
src/tycoonpy/service/: __init__.py  user_quality_service.py
src/tycoonpy/utils/: __init__.py  context_util.py
tests/: conftest.py
tests/configs/: tycoonpy_test.conf
tests/service/: test_user_quality_service.py
